--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         
 		<a class="link" href="{{ site.baseurl }}">{{ site.name }}</a>
 		<br>
-		<span>Theme &copy; <a class="link" href="https://gabriel-chen.github.io" target="_blank"> Gabriel</a> | </span>
+		<span>Theme &copy; <a class="link" href="https:https://maadrifla.github.io" target="_blank"> </a> |maadri </span>
 				<iframe
 			style="margin-left: 2px; margin-bottom:-5px;"
 			frameborder="0" scrolling="0" width="91px" height="20px"
